k8s-yamls-master/k8s-yamls-master/live/prod/vmwareq/4-deploy-redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vmwareq-redis
  name: vmwareq-redis
  namespace: itsystems-prod
spec:
  type: ClusterIP
  ports:
  - name: vmwareq-redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: vmwareq-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vmwareq-redis
  name: vmwareq-redis
  namespace: itsystems-prod
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vmwareq-redis
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vmwareq-redis
    spec:
      containers:
      - image: docker-local.artifactory.medimpact.com/systems/redis:6.0.8-buster
        imagePullPolicy: IfNotPresent
        name: vmwareq-redis
        resources:
          limits:
            cpu: "200m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "150Mi"
      securityContext:
        runAsUser: 999
