k8s-yamls-master/k8s-yamls-master/live/prod/vmwareq/5-deploy-vmwareq.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vmwareq
  namespace: itsystems-prod
spec:
  type: ClusterIP
  ports:
  - name: https-vmwareq
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: http-vmwareq
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: vmwareq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vmwareq
  name: vmwareq
  namespace: itsystems-prod
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: vmwareq
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vmwareq
    spec:
      containers:
      - image: drydock.medimpact.com/vmwareq:1
        imagePullPolicy: IfNotPresent
        name: vmwareq
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        # readinessProbe:
          # failureThreshold: 3
          # httpGet:
            # path: /
            # port: 5555
            # scheme: HTTP
          # initialDelaySeconds: 5
          # periodSeconds: 2
          # successThreshold: 1
          # timeoutSeconds: 1
        resources:
          limits:
            cpu: "400m"
            memory: "300Mi"
          requests:
            cpu: "50m"
            memory: "150Mi"
        volumeMounts:
        - mountPath: /app/config
          name: config
        - mountPath: /app/secret
          name: vcenters
      securityContext:
        runAsUser: 31337
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: config.yaml
            path: config.yaml
          name: vmwareq
        name: config
      - secret:
          defaultMode: 420
          secretName: vmwareq
          items:
          - key: vcenters.yaml
            path: vcenters.yaml
        name: vcenters
