k8s-yamls-master/k8s-yamls-master/live/prod/vmwareq/6-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: vmwareq.medimpact.com.tls
  namespace: itsystems-prod
spec:
  rules:
  - host: vmwareq.medimpact.com
    http:
      paths:
      - backend:
          serviceName: vmwareq
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - vmwareq.medimpact.com
    # secretName: vmwareq.medimpact.com.tls
