k8s-yamls-master/k8s-yamls-master/live/prod/vmwareq/2-netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.vmwareq.8080
  namespace: itsystems-prod
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 8080
        protocol: TCP
  podSelector:
    matchLabels:
      app: vmwareq
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress.vmwareq.8443
  namespace: itsystems-prod
spec:
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            namespace: ingress-nginx 
        podSelector:
          matchLabels:
            app.kubernetes.io/name: ingress-nginx
      ports:
      - port: 8443
        protocol: TCP
  podSelector:
    matchLabels:
      app: vmwareq
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vmwareq.redis.6379
  namespace: itsystems-prod
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vmwareq
    ports:
    - port: 6379
      protocol: TCP
  podSelector:
    matchLabels:
      app: vmwareq-redis
  policyTypes:
  - Ingress
